@@ -1,6 +1,8 @@
 Changes file for Log::Log4perl::Layout::JSON
 
 {{$NEXT}}
+  - format_prefix: Pass "category", "priority" and "caller level" to prefix so that %c, %p etc
+    can be rendered in the prefix [github #5].
 
 0.54  2018-07-02
   - Add support for "format_prefix" option.  If this is set, then the prefix
